--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,3 +35,20 @@
 .main {
     flex: 1 1 auto;
 }
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 10px;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: $activeColor;
+}
